# multishifter

./: .clang-format  .gitignore  .gitmodules  AUTHORS  CASMcode  CLI11  LICENSE  Makefile.am  Makesocket.am  README.md  bootstrap.sh  configure.ac  index.md
docs/: _config.yml  index.md
docs/_includes/: head.html  warning.css
docs/_layouts/: doublecenter.html
docs/graveyard/: jonas.vasp  licoo2.vasp  licoo2_prim.vesta  licoo2_repeat.vesta  uber.json
docs/tutorials/i/: graphite.vesta  graphite_intersection.vesta  graphite_sliced.vesta  index.md  mg.vesta  pyramidal.json  shift_unit.vesta
docs/tutorials/i/run/: config.ini  mg_pyramidal.vasp
docs/tutorials/ii/: BN.vasp  BN.vesta  final_slab.vesta  graphene.vasp  graphite_sliced.vasp  graphite_sliced.vesta  hetero_BN-BN-C.vasp  hetero_BN-BN-C.vesta  hetero_BN-C.vasp  hetero_BN-C.vesta  index.md  licoo2.vasp  licoo2.vesta  licoo2_good.vasp  licoo2_good.vesta  licoo2_single.vesta  licoo2_stack5.vesta  licoo2_stack5_floor8.vesta  raw_slab.vesta  uber.json
docs/tutorials/ii/run/: licoo2_stack5_floor8.vasp  r.vasp  tmp.vasp
docs/tutorials/iii/: full_record.json  index.md  li.vasp  mg_stack4.vasp  mg_stack4.vesta  mg_stack4_cleave.vasp  mg_stack4_cleave.vesta  mg_stack4_double.vesta  mg_stack4_fault.vasp  mg_stack4_fault.vesta  mush.json  reduced_record.json
docs/tutorials/iv/: .gitignore  al_stack8.vasp  index.md  uberplot.py
docs/tutorials/iv/al_cleave.26/: record.json  slab.vasp
docs/tutorials/iv/al_cleave.26/cleave__-0.050000/: POSCAR
docs/tutorials/iv/al_cleave.26/cleave__-0.100000/: POSCAR
docs/tutorials/iv/al_cleave.26/cleave__-0.150000/: POSCAR
docs/tutorials/iv/al_cleave.26/cleave__0.000000/: POSCAR
docs/tutorials/iv/al_cleave.26/cleave__0.050000/: POSCAR
docs/tutorials/iv/al_cleave.26/cleave__0.100000/: POSCAR
docs/tutorials/iv/al_cleave.26/cleave__0.150000/: POSCAR
docs/tutorials/iv/al_cleave.26/cleave__0.200000/: POSCAR
docs/tutorials/iv/al_cleave.26/cleave__0.300000/: POSCAR
docs/tutorials/iv/al_cleave.26/cleave__0.400000/: POSCAR
docs/tutorials/iv/al_cleave.26/cleave__0.500000/: POSCAR
docs/tutorials/iv/al_cleave.26/cleave__0.600000/: POSCAR
docs/tutorials/iv/al_cleave.26/cleave__0.700000/: POSCAR
docs/tutorials/iv/al_cleave.26/cleave__0.800000/: POSCAR
docs/tutorials/iv/al_cleave.26/cleave__0.900000/: POSCAR
docs/tutorials/iv/al_cleave.26/cleave__1.000000/: POSCAR
docs/tutorials/iv/al_cleave.26/cleave__1.250000/: POSCAR
docs/tutorials/iv/al_cleave.26/cleave__1.500000/: POSCAR
docs/tutorials/iv/al_cleave.26/cleave__1.750000/: POSCAR
docs/tutorials/iv/al_cleave.26/cleave__2.500000/: POSCAR
docs/tutorials/iv/al_cleave.3/: record.json
docs/tutorials/ix/: index.md
docs/tutorials/v/: gammaplot.py  index.md  mg_stack4.vasp  symplot.py
docs/tutorials/v/mg_shift12x12/: record.json
docs/tutorials/v/mg_shift3x3/: record.json
docs/tutorials/vi/: .gitignore  index.md  mg_stack4.vasp
docs/tutorials/vii/: fill_record.py  index.md  modified_record.json  snippet.md  surf.py
docs/tutorials/viii/: bottom_layer5.08.vesta  graphene.vasp  index.md  stack.vasp  stack5.08.vesta  top_layer5.08.vesta
include/multishift/: slab.hpp
lib/: Makemodule.am  casmblob
lib/casmblob/: Makemodule.am
lib/casmutils/: Makemodule.am  handlers.cxx  mapping  misc.cxx  mush  stage.cxx  sym  xtal
lib/multishift/: Makemodule.am  autodocs.hpp  base.cxx  base.hpp  cleaver.cxx  cleaver.hpp  define.hpp  definitions.hpp  exceptions.hpp  fourier.cxx  fourier.hpp  io.cxx  io.hpp  misc.cxx  misc.hpp  settings.hpp  shift.cxx  shift.hpp  shifter.cxx  shifter.hpp  slab.cxx  slab.hpp  slaber.cxx  slaber.hpp  slice_settings.cxx  slice_settings.hpp  slicer.cxx  slicer.hpp  surf.cxx  surf.hpp  twist.cxx  twist.hpp
lib/utiliblob/: Makemodule.am
lib/x_multishift/: autodocs.cxx  autodocs.hpp  base.cxx  fourier.cxx  io.hpp  misc.cxx  misc.hpp  shift.cxx  shift.hpp  surf.cxx
python/: Makemodule.am  multishift-plot  multishift-sidekick
sandbox/: reciprocals.py
src/: Makemodule.am  align.cxx  align.hpp  chain.cxx  chain.hpp  cleave.cxx  cleave.hpp  common_options.cxx  common_options.hpp  fourier.cxx  fourier.hpp  misc.cxx  misc.hpp  multishift.cpp  multishifter.cpp  mutate.cxx  mutate.hpp  shift.cxx  shift.hpp  slice.cxx  slice.hpp  stack.cxx  stack.hpp  translate.cxx  translate.hpp  twist.cxx  twist.hpp
src/base/: Makemodule.am  base.cpp
src/fourier/: Makemodule.am  fourier.cpp
src/multishift/: Makemodule.am  base.cxx  base.hpp  exceptions.hpp  io.cxx  io.hpp  legacy.cxx  multishift.cpp  shift.cxx  shift.hpp
src/shift/: Makemodule.am  shift.cpp
src/slice/: base.cpp
src/utiliblob/: Makemodule.am
tests/: Makemodule.am  autotools.hh  new_test.sh
tests/base_settings/: Makemodule.am  base_settings.cpp
tests/fourier_settings/: Makemodule.am  fourier_settings.cpp
tests/input_files/: b2.vasp  b2_101.vasp  complete_settings.json  fcc.vasp  hcp.vasp  mg_stack.vasp  slice_settings.json  triple_fcc.vasp
tests/integration/: run_align  run_chain  run_cleave  run_shift  run_slice  run_stack  run_translate  run_twist  settings.json  symplot.py
tests/projects/: symplot.py  voronoi.cpp  voronoi.py  voronoi.sh
tests/projects/Al-mush/: al.vasp  generate.sh  symplot.py
tests/projects/Mg-mush/: mg.vasp  prismatic.json
tests/regress/: Makemodule.am  common.rc.in  compare_pos.cpp
tests/regress/chain/: run.sh.in
tests/regress/mutate/: run.sh.in
tests/regress/mutate/in/: mg_stack4.vasp
tests/regress/slice/: run.sh.in
tests/regress/slice/in/: graphite.vasp  mg.vasp  mg_pyramidal.vasp
tests/regress/stack/: run.sh.in
tests/regress/stack/in/: graphite_sliced.vasp
tests/regress/translate/: run.sh.in
tests/regress/translate/in/: licoo2_stack5.vasp
tests/serialize/: Makemodule.am  serialize.cpp
tests/shift_settings/: Makemodule.am  shift_settings.cpp
tests/trivial/: Makemodule.am  trivial.cpp
tests/unit/: Makemodule.am
tests/unit/multishift/: cleaver.cpp  fourier.cpp  shift.cpp  shifter.cpp  slab.cpp  slaber.cpp  slice_settings.cpp  slicer.cpp  trivial.cpp  twist.cpp
(+153 files in other folders)
