AC_CONFIG_FILES([plugins/multishifter/tests/regress/common.rc])
AC_CONFIG_FILES([plugins/multishifter/tests/regress/slice/run.sh],[chmod +x plugins/multishifter/tests/regress/slice/run.sh])
AC_CONFIG_FILES([plugins/multishifter/tests/regress/stack/run.sh],[chmod +x plugins/multishifter/tests/regress/stack/run.sh])
AC_CONFIG_FILES([plugins/multishifter/tests/regress/translate/run.sh],[chmod +x plugins/multishifter/tests/regress/translate/run.sh])
AC_CONFIG_FILES([plugins/multishifter/tests/regress/mutate/run.sh],[chmod +x plugins/multishifter/tests/regress/mutate/run.sh])
